# ros2-lidar-object-detector

./: CMakeLists.txt  README.md  package.xml
launch/: myrobot.launch.py
object_distance/: CMakeLists.txt  package.xml
object_distance/launch/: myrobot.launch.py
object_distance/params/: myrobot.yaml
object_distance/urdf/: myrobot.xacro
object_distance/worlds/: demo_world.sdf
params/: myrobot.yaml
src/: scan_filter.cpp
urdf/: myrobot.gazebo  myrobot.xacro
